Fix ground z-index

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -54,6 +54,7 @@
   left: 0;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .grass, .soil {
